# Nabla

./: .clang-format  .conflict-files  .gitignore  .gitmodules  .vsconfig  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Jenkinsfile  README.md  build-andr.sh  compile.bat  compose.yml  conanfile.py  ngit.bat  pipeline.groovy  run_tests.py  vars.bat  vars.sh
android-sample/: CMakeLists.txt  main.cpp
docs/: CMakeLists.txt  ci-commands.md  footer.html  nsc-channel-promotion.md  nsc-prebuilds.md  nsc-promotion.md  nsc-toolchain-package.md  package-components.md
docs/consume/: README.md
docs/contribute/: CONTRIBUTE.md
examples_tests/: .gitignore  CMakeLists.txt  Readme.md
examples_tests/0.ImportanceSamplingEnvMaps/: fullscreen.frag  main.cpp
examples_tests/0.Polyphase/: main.cpp
examples_tests/01.HelloWorld/: HelloWorld.cbp  HelloWorld.depend  HelloWorld.layout  main.cpp
examples_tests/02.CPU_Triangles/: CPU_Triangles.cbp  main.cpp
examples_tests/02.ComputeShader/: compute.comp  main.cpp
examples_tests/02.GPU_Sort/: GPU_Sort.cbp  main.cpp
examples_tests/03.GPU_Mesh/: GPU_Mesh.cbp  GPU_Mesh.depend  GPU_Mesh.layout  main.cpp  mesh.vert
examples_tests/04.BuiltinNodes/: BuiltInNodes.cbp  BuiltInNodes.depend  BuiltInNodes.layout  main.cpp  mesh.frag  mesh.vert
examples_tests/04.Keyframe/: main.cpp
examples_tests/05.IrrlichtBaWTutorialExample/: main.cpp
examples_tests/05.NablaTutorialExample/: main.cpp
examples_tests/05.SpherePoints/: SpherePoints.cbp  SpherePoints.depend  SpherePoints.layout  main.cpp  points.frag  points.vert
examples_tests/06.MeshLoaders/: CMakeLists.txt  MeshLoaders.cbp  main.cpp  mesh.frag  mesh.vert  meshloaders.sln  meshloaders.vcxproj  meshloaders.vcxproj.filters
examples_tests/06.TriangleSelectors/: TriangleSelectors.cbp  main.cpp  mesh.frag  mesh.vert
examples_tests/07.HardwareSkinning/: HardwareSkinning.cbp  main.cpp  mesh.frag  mesh.vert
examples_tests/07.MeshLoaders/: MeshLoaders.cbp  main.cpp  mesh.vert
examples_tests/07.SubpassBaking/: CMakeLists.txt  main.cpp
examples_tests/08.HardwareInstancing/: HardwareInstancing.cbp  HardwareInstancing.sln  HardwareInstancing.vcxproj  clearCameraDrawcalls.comp  clearDrawsAndCullObjects.comp  common.glsl  cullObjects.comp  culling.geom  culling.vert  expandObjectsIntoDrawcalls.comp  histogramLevel2.comp  histogramMeshBuffersLevel2.comp  main.cpp  mesh.frag  mesh.vert  setupRedirects.comp  shaderCommon.glsl  sortRedirects.comp
examples_tests/09.ColorSpaceTest/: ApplicationHandler.cpp  ApplicationHandler.hpp  CMakeLists.txt  imagesTestList.txt  main.cpp  present.frag  present2D.frag  present2DArray.frag  presentCubemap.frag  testlist.txt
examples_tests/09.FrontClearingBug/: FrontClearingBug.cbp  main.cpp
examples_tests/09.PerfTest/: CMakeLists.txt  PerfTest.cbp  main.cpp  mesh.frag  mesh.vert
examples_tests/10.AllocPerfTest/: AllocPerfTest.cbp  main.cpp
examples_tests/10.AllocatorTest/: CMakeLists.txt  main.cpp
examples_tests/11.LoDSystem/: common.glsl  cull_overrides.glsl  main.cpp  mesh.frag  mesh.vert  per_view_per_instance_struct.glsl
examples_tests/11.RayCastCollision/: RayCastCollision.cbp  main.cpp
examples_tests/12.Splines/: CMakeLists.txt  Splines.cbp  main.cpp
examples_tests/12.glTF/: main.cpp
examples_tests/13.BRDF_Explorer/: BRDF.cpp  BRDF.h  BRDFExplorerApp.cpp  BRDFExplorerApp.h  CBRDFBuiltinIncludeLoader.h  CComputeShaderManager.cpp  CComputeShaderManager.h  CMakeLists.txt  README.md  createDerivMapFromBumpMap.cpp  deriv_map_gen.comp  getTextureGLname.cpp  irrTex2ceguiTex.cpp  main.cpp  workaroundFunctions.h
examples_tests/13.EmptyExample/: main.cpp
examples_tests/13.Silverlining/: CMakeLists.txt  Silverlining.cbp  Silverlining.layout  main.cpp
examples_tests/14.ComputeScan/: CMakeLists.txt  main.cpp
examples_tests/14.MSAA/: MSAA.cbp  main.cpp  mesh.frag  mesh.vert  postproc.frag  screenquad.vert
examples_tests/15.LayeredCubeMapShadows/: LayeredCubeMapShadows.cbp  createComputeShader.h  cubeMapLayerDispatch.geom  deriv_map_gen.comp  main.cpp  merge_deriv_xy.comp  mesh.frag  mesh.vert  meshShadow.vert  shadow.frag  skinnedMesh.vert  skinnedMeshShadow.vert
examples_tests/16.OrderIndependentTransparency/: CMakeLists.txt  fullscreentri.vert  main.cpp  mesh.frag  mesh.vert  oit_fill_nodes.frag
examples_tests/16.OrderIndependentTransparencyZoo/: OITZoo.cbp  fullscreentri.vert  main.cpp  mesh.frag  mesh.vert  mesh_minTrans.frag  minTransResolve.frag  stencilKClear.frag  stencilKResolve.frag
examples_tests/17.SimpleBulletIntegration/: CMakeLists.txt  Camera.hpp  SimpleBulletIntegration.cbp  culling.geom  culling.vert  main.cpp  mesh.frag  mesh.vert
examples_tests/18.DifferentSizeFBOAttachments/: DifferentSizeFBOAttachments.cbp  main.cpp
examples_tests/18.MitsubaLoader/: CMakeLists.txt  culling.geom  culling.vert  main.cpp  mesh.frag  mesh.vert  mesh_instanced.vert  test.frag  test.vert
examples_tests/19.SIMDmatrixMultiplication/: SIMDmatrixMultiplication.cbp  main.cpp  simdmtx.sln  simdmtx.vcxproj
examples_tests/20.Megatexture/: main.cpp  mesh.frag  mesh.vert
examples_tests/20a.MegatextureDebug/: debugShader.frag  main.cpp
examples_tests/21.DynamicTextureIndexing/: main.cpp  mesh.frag  mesh.vert
examples_tests/22.RaytracedAO/: CMakeLists.txt  CommandLineHandler.cpp  CommandLineHandler.hpp  InstanceDataPerCamera.glsl  README.md  Renderer.cpp  Renderer.h  closestHit.comp  common.glsl  common.h  cull.comp  denoiser_hook.bat  drawCommon.glsl  drawCommon.h  extractCubemap.bat  fillVisBuffer.frag  fillVisBuffer.vert  genWarpMap.comp  lumaMipMapGen.comp  main - Copy.cpp  main.cpp  mergeCubemap.bat  mesh.frag  mesh.vert  pannelum_sample_config.json  present2D.frag  rasterizationCommon.h  raygen.comp  raygenCommon.glsl  raytraceCommon.glsl  raytraceCommon.h  resolve.comp  test.bat  test_scenes.txt  virtualGeometry.glsl  warpCommon.h
ext/: CMakeLists.txt  Readme.md
ext/Bullet/: README.md  (+8 more)
smoke/: CMakeLists.txt  CTestTestfile.install.cmake.in  NablaSmokeTests.cmake  RunSmokeFlow.cmake  main.cpp  pch.hpp  run_override_test.cmake
(+4734 files in other folders)
