# Copyright (C) 2018-2020 - DevSH Graphics Programming Sp. z O.O.
# This file is part of the "Nabla Engine".
# For conditions of distribution and use, see copyright notice in nabla.h

if(NBL_BUILD_ANDROID)
	nbl_android_create_media_storage_apk()
endif()

add_subdirectory(01.HelloWorld EXCLUDE_FROM_ALL)
add_subdirectory(02.ComputeShader EXCLUDE_FROM_ALL)
add_subdirectory(03.GPU_Mesh EXCLUDE_FROM_ALL)
add_subdirectory(04.Keyframe EXCLUDE_FROM_ALL)
add_subdirectory(05.NablaTutorialExample EXCLUDE_FROM_ALL)
add_subdirectory(06.MeshLoaders EXCLUDE_FROM_ALL)
add_subdirectory(07.SubpassBaking EXCLUDE_FROM_ALL)
#add_subdirectory(08.REUSE EXCLUDE_FROM_ALL)
add_subdirectory(09.ColorSpaceTest EXCLUDE_FROM_ALL)
add_subdirectory(10.AllocatorTest EXCLUDE_FROM_ALL)
add_subdirectory(11.LoDSystem EXCLUDE_FROM_ALL)
add_subdirectory(12.glTF EXCLUDE_FROM_ALL)
#add_subdirectory(13.REUSE EXCLUDE_FROM_ALL)
add_subdirectory(14.ComputeScan EXCLUDE_FROM_ALL)
#REUSE 15 is reserved for Erfan
add_subdirectory(16.OrderIndependentTransparency EXCLUDE_FROM_ALL)
if (NBL_BUILD_BULLET AND NOT NBL_BUILD_ANDROID) # The reason why bullet shouldn't build on android: https://github.com/bulletphysics/bullet3/issues/4025
	add_subdirectory(17.SimpleBulletIntegration EXCLUDE_FROM_ALL) # Needs example 08 to come back first
endif()
if (NBL_BUILD_MITSUBA_LOADER)
	add_subdirectory(18.MitsubaLoader EXCLUDE_FROM_ALL)
endif()
#REUSE 19
add_subdirectory(20.Megatexture EXCLUDE_FROM_ALL)
add_subdirectory(21.DynamicTextureIndexing EXCLUDE_FROM_ALL) # TODO: revive
if (NBL_BUILD_MITSUBA_LOADER)
	add_subdirectory(22.RaytracedAO EXCLUDE_FROM_ALL)
endif()
add_subdirectory(23.Autoexposure EXCLUDE_FROM_ALL)
#add_subdirectory(24.REUSE EXCLUDE_FROM_ALL) # TODO: @Anastazluk or @Hazardu
#add_subdirectory(25.Blur EXCLUDE_FROM_ALL)
#add_subdirectory(26.MultidrawIndirectVSCPUCull EXCLUDE_FROM_ALL)
add_subdirectory(27.PLYSTLDemo EXCLUDE_FROM_ALL)
#add_subdirectory(28.REUSE EXCLUDE_FROM_ALL)
add_subdirectory(29.SpecializationConstants EXCLUDE_FROM_ALL)
#add_subdirectory(32.REUSE EXCLUDE_FROM_ALL) # TODO: @Anastazluk make this into example 04
add_subdirectory(33.Draw3DLine EXCLUDE_FROM_ALL)
add_subdirectory(34.LRUCacheUnitTest EXCLUDE_FROM_ALL)
add_subdirectory(35.GeometryCreator EXCLUDE_FROM_ALL)
add_subdirectory(36.CUDAInterop EXCLUDE_FROM_ALL)
add_subdirectory(38.EXRSplit EXCLUDE_FROM_ALL)
if (NBL_BUILD_MITSUBA_LOADER AND NBL_BUILD_OPTIX)
	add_subdirectory(39.DenoiserTonemapper EXCLUDE_FROM_ALL)
endif()
add_subdirectory(40.GLITest EXCLUDE_FROM_ALL)
add_subdirectory(41.VisibilityBuffer EXCLUDE_FROM_ALL) #TODO: waits for SPIRV-Cross issue about barycentrics
add_subdirectory(42.FragmentShaderPathTracer EXCLUDE_FROM_ALL)
add_subdirectory(43.SumAndCDFFilters EXCLUDE_FROM_ALL)
add_subdirectory(44.LevelCurveExtraction EXCLUDE_FROM_ALL)
add_subdirectory(45.BRDFEvalTest EXCLUDE_FROM_ALL)
add_subdirectory(46.SamplingValidation EXCLUDE_FROM_ALL)
add_subdirectory(47.DerivMapTest EXCLUDE_FROM_ALL)
add_subdirectory(48.ArithmeticUnitTest EXCLUDE_FROM_ALL)
add_subdirectory(49.ComputeFFT EXCLUDE_FROM_ALL)
add_subdirectory(50.NewAPITest EXCLUDE_FROM_ALL)
add_subdirectory(51.RadixSort EXCLUDE_FROM_ALL)
add_subdirectory(52.SystemTest EXCLUDE_FROM_ALL)
add_subdirectory(53.ComputeShaders EXCLUDE_FROM_ALL)
add_subdirectory(54.Transformations EXCLUDE_FROM_ALL)
add_subdirectory(55.RGB18E7S3 EXCLUDE_FROM_ALL)
add_subdirectory(56.RayQuery EXCLUDE_FROM_ALL)
if (NOT NBL_BUILD_ANDROID)
	add_subdirectory(57.AndroidSample EXCLUDE_FROM_ALL)
	add_subdirectory(58.MediaUnpackingOnAndroid EXCLUDE_FROM_ALL)
endif()
add_subdirectory(60.ClusteredRendering EXCLUDE_FROM_ALL)
add_subdirectory(61.OrientedBoundingBox EXCLUDE_FROM_ALL)
add_subdirectory(0.ImportanceSamplingEnvMaps EXCLUDE_FROM_ALL) #TODO: integrate back into 42
